--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,7 +17,11 @@ body {
 	<!-- diese Zeile zuvor löschen
 <a href="Datenadresse eintragen" target="_blank">Aufgabe 1a, 1.1.2015</a></br>
 und diese -->
-	
+	<a href="https://sebifyy.github.io/EIA2/Aufgabe 0/aufgabe0.html"
+		target="_blank">Aufgabe 0 - 05.10.2018</a>
+	<a href="https://sebifyy.github.io/EIA2/" target="_blank">Projektpage</a>
+	/
+	<a href="https://github.com/sebifyy/sebifyy.github.io" target="_blank">Repository</a>
 	Vorkenntnisse: keine
 
 	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
