Userpage zum Steckbrief hinzugefügt

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -23,7 +23,9 @@ und diese -->
 	<a href="https://sebifyy.github.io/EIA2/" target="_blank">Projektpage</a>
 	/
 	<a href="https://github.com/sebifyy/sebifyy.github.io" target="_blank">Repository</a>
-	Vorkenntnisse: keine
+	/
+	<a href="https://sebifyy.github.io/index.html" target="_blank">Userpage</a>
+	Vorkenntnisse: EIA
 
 	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
 </body>
