Kleinere Fehler behoben

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -25,7 +25,7 @@ und diese -->
 	<a href="https://github.com/sebifyy/sebifyy.github.io" target="_blank">Repository</a>
 	/
 	<a href="https://sebifyy.github.io/index.html" target="_blank">Userpage</a>
-	Vorkenntnisse: EIA
+	Vorkenntnisse: EIA1
 
 	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
 </body>
