--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,15 +17,32 @@ body {
 	<!-- diese Zeile zuvor löschen
 <a href="Datenadresse eintragen" target="_blank">Aufgabe 1a, 1.1.2015</a></br>
 und diese -->
-	<a href="https://sebifyy.github.io/EIA2/Aufgabe 0/aufgabe0.html"
-		target="_blank">Aufgabe 0 - 05.10.2018</a>
-	</br>
 	<a href="https://sebifyy.github.io/EIA2/" target="_blank">Projektpage</a>
 	/
 	<a href="https://github.com/sebifyy/sebifyy.github.io" target="_blank">Repository</a>
 	/
 	<a href="https://sebifyy.github.io/index.html" target="_blank">Userpage</a>
-	Vorkenntnisse: EIA1
+
+
+	<!-- AUFGABEN -->
+	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%201/Cows%20Tracetable.pdf"
+		target="_blank">Aufgabe 1.1 - Tracetable, 14.10.2018</a>
+	</br>
+
+	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%201/Boxes%20Tracetable.pdf"
+		target="_blank">Aufgabe 1.2 - Tracetable, 14.10.2018</a>
+	</br>
+
+	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%201/Boxes%20Activity.pdf"
+		target="_blank"> Aufgabe 1.2 - Diagramm, 14.10.2018</a>
+	</br>
+
+	<a href="https://sebifyy.github.io/EIA2/Aufgabe 0/aufgabe0.html"
+		target="_blank">Aufgabe 0 - 05.10.2018</a>
+	</br> Vorkenntnisse: EIA1
 
 	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
 </body>
