Steckbrief mit aufgabe 1.2 skizze

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -41,6 +41,11 @@ und diese -->
 		target="_blank"> Aufgabe 1.2 - Diagramm, 14.10.2018</a>
 	</br>
 
+	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%201/aufgabe1-2-skizze.jpg"
+		target="_blank">Aufgabe 1.2 - Skizze, 16.10.2018</a>
+	</br>
+
 	<a href="https://sebifyy.github.io/EIA2/Aufgabe 0/aufgabe0.html"
 		target="_blank">Aufgabe 0 - 05.10.2018</a>
 	</br> Vorkenntnisse: EIA1
