--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -37,7 +37,7 @@ und diese -->
 	</br>
 
 	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%201/Boxes%20Activity.pdf"
+		href="https://sebifyy.github.io/EIA2/Aufgabe%201/aufg1-2diagramm.pdf"
 		target="_blank"> Aufgabe 1.2 - Diagramm, 14.10.2018</a>
 	</br>
 
