Repository Link aktualisiert

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -19,7 +19,7 @@ body {
 und diese -->
 	<a href="https://sebifyy.github.io/EIA2/" target="_blank">Projektpage</a>
 	/
-	<a href="https://github.com/sebifyy/sebifyy.github.io" target="_blank">Repository</a>
+	<a href="https://github.com/sebifyy/EIA2" target="_blank">Repository</a>
 	/
 	<a href="https://sebifyy.github.io/index.html" target="_blank">Userpage</a>
 	</br>
