Aufgabe 2 Aktivitätsdiagramm verlinkt

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,6 +27,11 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Konzepte/aktivit%C3%A4tsdiagramm.pdf"
+		target="_blank">Aufgabe 2 - Aktivitätsdiagramm, 17.10.2018</a>
+	</br>
+
+	<a
 		href="https://sebifyy.github.io/EIA2/Aufgabe%201/Cows%20Tracetable.pdf"
 		target="_blank">Aufgabe 1.1 - Tracetable, 14.10.2018</a>
 	</br>
