Aufgabe 2 im steckbrief

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,6 +27,11 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Codes/uno_game.html"
+		target="_blank">Aufgabe 2 - HTML, 21.10.2018</a>
+	</br>
+
+	<a
 		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Konzepte/A2_HTMLScribble.png"
 		target="_blank">Aufgabe 2 - HTML Skizze, 18.10.2018</a>
 	</br>
