Steckbrief verlinkung zu Konzepten Aufg3

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,6 +27,16 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/HTMLScribble.png"
+		target="_blank">Aufgabe 3 - Konzept HTML, 04.11.18</a>
+	</br>
+
+	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/Aufg3-flowcharts.pdf"
+		target="_blank">Aufgabe 3 - Konzept FLowcharts, 04.11.18</a>
+	</br>
+
+	<a
 		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Codes/uno_game.html"
 		target="_blank">Aufgabe 2 - HTML, 28.10.2018</a>
 	</br>
