--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -33,7 +33,7 @@ und diese -->
 
 	<a
 		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/Aufg3-flowcharts.pdf"
-		target="_blank">Aufgabe 3 - Konzept FLowcharts, 04.11.18</a>
+		target="_blank">Aufgabe 3 - Konzept Flowcharts, 08.11.18</a>
 	</br>
 
 	<a
