steckbrief update aufg2 diagramm

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -47,8 +47,8 @@ und diese -->
 	</br>
 
 	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Konzepte/aktivit%C3%A4tsdiagramm.pdf"
-		target="_blank">Aufgabe 2 - Aktivitätsdiagramm, 17.10.2018</a>
+		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Konzepte/aufg2-diagramm.pdf"
+		target="_blank">Aufgabe 2 - Aktivitaetsdiagramm, 17.10.2018</a>
 	</br>
 
 	<a
