Steckbreif aufgabe 3 konzept final

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,13 +27,8 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/HTMLScribble.png"
-		target="_blank">Aufgabe 3 - Konzept HTML, 04.11.18</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/flowchart-aufg3.pdf"
-		target="_blank">Aufgabe 3 - Konzept Flowcharts, 08.11.18</a>
+		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/Aufgabe3_KonzeptFin.pdf"
+		target="_blank">Aufgabe 3 - Konzept, 08.11.18</a>
 	</br>
 
 	<a
