--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,6 +27,11 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Codes/uno_game.html">Aufgabe
+		3 - HTML, 11.11.2018</a>
+	</br>
+
+	<a
 		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/Aufgabe3_KonzeptFin.pdf"
 		target="_blank">Aufgabe 3 - Konzept, 08.11.18</a>
 	</br>
