--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,8 +27,8 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Codes/uno_game.html">Aufgabe
-		3 - html, 11.11.2018</a>
+		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Codes/uno_game.html"
+		target="_blank">Aufgabe 3 - html, 11.11.2018</a>
 	</br>
 
 	<a
