--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,6 +27,11 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
+		href="https://github.com/sebifyy/EIA2/blob/master/Aufgabe%205/Konzepte/aufg5koncept.pdf">Aufgabe
+		5 - Konzept, 21.11.2018</a>
+	</br>
+
+	<a
 		href="https://sebifyy.github.io/EIA2/Aufgabe%204/Codes/aufgabe4.html"
 		target="_blank">Aufgabe 4 - HTML, 18.11.2018</a>
 	</br>
