--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,8 +27,8 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
-		href="https://github.com/sebifyy/EIA2/blob/master/Aufgabe%205/Konzepte/aufg5koncept.pdf">Aufgabe
-		5 - Konzept, 21.11.2018</a>
+		href="https://sebifyy.github.io/EIA2/Aufgabe%205/Konzepte/aufg5koncept.pdf"
+		target="_blank">Aufgabe 5 - Konzept, 21.11.2018</a>
 	</br>
 
 	<a
