steckbrief auf6 verlinkungg

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -27,6 +27,11 @@ und diese -->
 
 	<!-- AUFGABEN -->
 	<a
+		href="https://github.com/sebifyy/EIA2/blob/master/Aufgabe%206/Server/Server.ts"
+		target="_blank">Aufgabe 6 - Servert.ts, 28.11.2018</a>
+	</br>
+
+	<a
 		href="https://sebifyy.github.io/EIA2/Aufgabe%205/Codes/aufgabe5.html"
 		target="_blank">Aufgabe 5 - HTML, 25.11.2018</a>
 	</br>
