--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -23,6 +23,10 @@ und diese -->
 	/
 	<a href="https://sebifyy.github.io/index.html" target="_blank">Userpage</a>
 	</br>
+	<a
+		href="https://sebifyy.github.io/EIA2/Aufgabe6/Aufgabe%206%20-%20Dokumentation.pdf"
+		target="_blank">Aufgabe 6 - Dokumentation, 06.12.2018</a>
+	</br>
 
 
 	<!-- AUFGABEN -->
