--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -23,89 +23,7 @@ und diese -->
 	/
 	<a href="https://sebifyy.github.io/index.html" target="_blank">Userpage</a>
 	</br>
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe6/Aufgabe%206%20-%20Dokumentation.pdf"
-		target="_blank">Aufgabe 6 - Dokumentation, 06.12.2018</a>
-	</br>
-
-
-	<!-- AUFGABEN -->
-	<a href="https://eia2sh.herokuapp.com/Testtesttt" target="_blank">Herokuapp,
-		02.12.2018</a>
-	</br>
-
-	<a
-		href="https://github.com/sebifyy/EIA2/blob/master/Aufgabe%206/Server/Server.ts"
-		target="_blank">Aufgabe 6 - Servert.ts, 28.11.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%205/Codes/aufgabe5.html"
-		target="_blank">Aufgabe 5 - HTML, 25.11.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%205/Konzepte/aufg5koncept.pdf"
-		target="_blank">Aufgabe 5 - Konzept, 21.11.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%204/Codes/aufgabe4.html"
-		target="_blank">Aufgabe 4 - HTML, 18.11.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%204/Konzepte/aufg4koncept.pdf"
-		target="_blank">Aufgabe 4 - Konzept, 15.11.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Codes/uno_game.html"
-		target="_blank">Aufgabe 3 - html, 11.11.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%203/Konzepte/Aufgabe3_KonzeptFin.pdf"
-		target="_blank">Aufgabe 3 - Konzept, 08.11.18</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Codes/uno_game.html"
-		target="_blank">Aufgabe 2 - HTML, 28.10.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Konzepte/A2_HTMLScribble.png"
-		target="_blank">Aufgabe 2 - HTML Skizze, 18.10.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%202/Konzepte/aufg2-diagramm.pdf"
-		target="_blank">Aufgabe 2 - Aktivitaetsdiagramm, 17.10.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%201/Cows%20Tracetable.pdf"
-		target="_blank">Aufgabe 1.1 - Tracetable, 14.10.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%201/Boxes%20Tracetable.pdf"
-		target="_blank">Aufgabe 1.2 - Tracetable, 14.10.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%201/aufg1-2diagramm.pdf"
-		target="_blank"> Aufgabe 1.2 - Diagramm, 14.10.2018</a>
-	</br>
-
-	<a
-		href="https://sebifyy.github.io/EIA2/Aufgabe%201/aufgabe1-2-skizze.jpg"
-		target="_blank">Aufgabe 1.2 - Skizze, 16.10.2018</a>
-	</br>
-
-	<a href="https://sebifyy.github.io/EIA2/Aufgabe 0/aufgabe0.html"
-		target="_blank">Aufgabe 0 - 05.10.2018</a>
+	Nur für die Endabgabe hier
 	</br> Vorkenntnisse: EIA1
 
 	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
