--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -6,22 +6,30 @@
 body {
 	font-family: arial;
 	font-size: small;
-	background: #eeeeee
+	background: #eeeeee;
 }
 </style>
 </head>
 <body>
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
-
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<!-- diese Zeile zuvor löschen
 <a href="Datenadresse eintragen" target="_blank">Aufgabe 1a, 1.1.2015</a></br>
 und diese -->
+	<a href="https://github.com/sebifyy/EIA2_Endabgabe-SebastianHoffmann" target="_blank">ENDABGABE REPOSITORY</a>
+	<a href="https://sebifyy.github.io/EIA2_Endabgabe-SebastianHoffmann/EIA2_Designdokument-Konzept_SebastianHoffmann-259316.pdf" target="_blank">ENDABGABE KONZEPT</a>
+	<a href="https://sebifyy.github.io/EIA2_Endabgabe-SebastianHoffmann/Index.html" target="_blank">ENDABGABE ANWENDUNG</a>
+	<a href="https://github.com/sebifyy/EIA2_Endabgabe-SebastianHoffmann/blob/master/EIA2_Endabgabe-SebastianHoffman-259316.zip" target="_blank">ENDABGABE ZIP</a>
+
+
+
 	<a href="https://sebifyy.github.io/EIA2/" target="_blank">Projektpage</a>
 	/
 	<a href="https://github.com/sebifyy/EIA2" target="_blank">Repository</a>
 	/
 	<a href="https://sebifyy.github.io/index.html" target="_blank">Userpage</a>
+
+
 	</br>
 	Nur für die Endabgabe hier
 	</br> Vorkenntnisse: EIA1
